added the VignettePackage directiv
git-svn-id: https://hedgehog.fhcrc.org/bioconductor/trunk/madman/Rpacks/affyPLM@6276 bc3139a8-67e5-0310-9ffc-ced21a209358

--- a/inst/doc/ThreeStep.Rnw
+++ b/inst/doc/ThreeStep.Rnw
@@ -1,4 +1,5 @@
 %\VignetteIndexEntry{affyPLM: the "threestep" function}
+%\VignettePackage{affyPLM}
 \documentclass[12pt]{article}
 \usepackage{amsmath,pstricks}
 \usepackage{hyperref}
