update bg.correct.gcrma so it wraps the new bg.adjust.gcrma function in gcrma package.
Update and make more current various email and web addresses.


git-svn-id: https://hedgehog.fhcrc.org/bioconductor/trunk/madman/Rpacks/affyPLM@14816 bc3139a8-67e5-0310-9ffc-ced21a209358

--- a/inst/doc/AffyExtensions.Rnw
+++ b/inst/doc/AffyExtensions.Rnw
@@ -23,7 +23,7 @@
 
 \newcommand{\scscst}{\scriptscriptstyle}
 \newcommand{\scst}{\scriptstyle}
-\author{Ben Bolstad \\ {\tt bolstad@stat.berkeley.edu}}
+\author{Ben Bolstad \\ {\tt bmb@bmbolstad.com} \\ \url{http://bmbolstad.com}}
 \begin{document}
 \title{affyPLM: Fitting Probe Level Models}
 \maketitle
@@ -574,7 +574,7 @@ and $\Psi'$ is a diagonal matrix of $\psi'$ values. When using \Rfunction{fitPLM
 \begin{equation}
 \frac{\sum w(r_i) r_i^2}{n-p} \left(X^T W  X\right)^{-1}
 \end{equation}
-as the estimator for variance covariance matrix, where $W$ is a diagonal matrix of weight values.. This option is selected by using \Rfunarg{se.type=4}.
+as the estimator for variance covariance matrix, where $W$ is a diagonal matrix of weight values. This option is selected by using \Rfunarg{se.type=4}.
 
 
 \nocite{*}
