fix qnorm.c code so builds on sparc solaris (or at least hope that it does)
git-svn-id: https://hedgehog.fhcrc.org/bioconductor/trunk/madman/Rpacks/affyPLM@18392 bc3139a8-67e5-0310-9ffc-ced21a209358

--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,12 @@
+1.9.3-1.9.5
+-----------
+
+Small fix to fitPLM for soybean arrays.
+A number of quantile normalization variants.
+
+
+
+
 1.9.2   May 1, 2005
 -----
 
