changes in MAplot to fit with the changes in ma.plot
git-svn-id: https://hedgehog.fhcrc.org/bioconductor/trunk/madman/Rpacks/affyPLM@18591 bc3139a8-67e5-0310-9ffc-ced21a209358

--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,14 @@
+1.9.7
+-----
+Modify MAplot for exprSet, PLMset objects
+
+
+1.9.6
+-----
+Added normalize.AffyBatch.quantiles.chromosome
+
+
+
 1.9.3-1.9.5
 -----------
 
