log-scale mean == geometric mean may be used determining scaling amounts for scaling normalizations
git-svn-id: https://hedgehog.fhcrc.org/bioconductor/trunk/madman/Rpacks/affyPLM@18797 bc3139a8-67e5-0310-9ffc-ced21a209358

--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,9 @@
+1.9.8
+-----
+add ability to calculate scaling factors for scaling normalizations on the log2 scale. This modification of the scaling
+normalization method was recommended by   Lu, Chao (2004) Improving the scaling normalization for high-density oligonucleotide GeneChip expression microarrays. BMC Bioinformatics 5:103
+
+
 1.9.7
 -----
 Modify MAplot for exprSet, PLMset objects
