add hist() for exprSet
git-svn-id: https://hedgehog.fhcrc.org/bioconductor/trunk/madman/Rpacks/affyPLM@18956 bc3139a8-67e5-0310-9ffc-ced21a209358

--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,8 @@
+1.9.10
+------
+Added hist() for exprSet
+
+
 1.9.9
 -----
 Added an additional vignette explaining various ways to use the MAplot function.
