--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,8 @@
+1.9.12
+------
+A .Call() at the C level for accessing the optimized rlm for the rma type model.
+
+
 1.9.11
 ------
 Fix small qnorm find/apply target bug
