--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,11 @@
+1.9.14
+------
+The model PM ~ -1 + samples + treatment:probes was being misidentified in C code and the default model fitted instead.
+
+1.9.13
+------
+a small fix to boxplot() when applied to a PLMset containing a non-default model
+
 1.9.12
 ------
 A .Call() at the C level for accessing the optimized rlm for the rma type model.
@@ -46,7 +54,7 @@ A number of quantile normalization variants.
 
 
 
-1.9.2   May 1, 2005
+1.9.2   May 1, 2006
 -----
 
 ReadRMAExpress() can deal with gzipped files.
