--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,8 @@
+1.9.15
+------
+Change moduleCdynload to R_moduleCdynload
+
+
 1.9.14
 ------
 The model PM ~ -1 + samples + treatment:probes was being misidentified in C code and the default model fitted instead.
