add a function preprocess() which does normalization and background correction only
git-svn-id: https://hedgehog.fhcrc.org/bioconductor/trunk/madman/Rpacks/affyPLM@20552 bc3139a8-67e5-0310-9ffc-ced21a209358

--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,10 @@
+1.11.2
+------
+
+Introduce preprocess() for general pre-processing (ie normalize and background correcting)
+
+
+
 1.11.1
 ------
 
