fix an unbalanced UNPROTECT in normalize.quantiles.use.target when copy=FALSE
git-svn-id: https://hedgehog.fhcrc.org/bioconductor/trunk/madman/Rpacks/affyPLM@20838 bc3139a8-67e5-0310-9ffc-ced21a209358

--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,9 @@
+1.11.4
+------
+
+instances of "\." in a pattern were changed to "\\."
+
+
 1.11.3
 ------
 fix minor verbosity problem in pre-process
