add SE output to the rma model rlm .Call function
git-svn-id: https://hedgehog.fhcrc.org/bioconductor/trunk/madman/Rpacks/affyPLM@20947 bc3139a8-67e5-0310-9ffc-ced21a209358

--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,15 @@
+1.11.6
+------
+Add SE output to raw rlm function (for direct calling).
+
+
+
+1.11.5
+------
+Fixed an unbalanced UNPROTECT
+
+
+
 1.11.4
 ------
 
