some small optimizations in c code
git-svn-id: https://hedgehog.fhcrc.org/bioconductor/trunk/madman/Rpacks/affyPLM@21113 bc3139a8-67e5-0310-9ffc-ced21a209358

--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,8 @@
+1.11.7
+------
+Some small memory/speed optimizations in some of the C code
+
+
 1.11.6
 ------
 Add SE output to raw rlm function (for direct calling).
