--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,9 @@
+1.11.8
+------
+Small optimization for RMA background C code.
+
+
+
 1.11.7
 ------
 Some small memory/speed optimizations in some of the C code
