some fixes so that affyPLM once again passes R CMD check. More work needed.
git-svn-id: https://hedgehog.fhcrc.org/bioconductor/trunk/madman/Rpacks/affyPLM@21793 bc3139a8-67e5-0310-9ffc-ced21a209358

--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,9 @@
+1.11.11
+-------
+
+Some fixes to make it pass R CMD check. changes how const.coefs are stored.
+
+
 1.11.8
 ------
 Small optimization for RMA background C code.
