PLMset objects no longer haave direct dependence on eSet objects (nor exprSets as done historically) remove all exprSet functions or replace with ExpressionSet equivalents
git-svn-id: https://hedgehog.fhcrc.org/bioconductor/trunk/madman/Rpacks/affyPLM@21817 bc3139a8-67e5-0310-9ffc-ced21a209358

--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,11 @@
+1.11.13
+-------
+PLMset no longer contains an eSet object and has no direct dependencies on ExpressionSets etc
+all the exprSet functions/methods have been replaced with equivalent ExpressionSet methods
+
+
+
+
 1.11.12
 -------
 Additional fixes to get it to pass R CMD check (which it now does). MAplot for ExpressionSet.
