fix a C language warning related to recent removal of qnorm code to preprocessCore
git-svn-id: https://hedgehog.fhcrc.org/bioconductor/trunk/madman/Rpacks/affyPLM@24948 bc3139a8-67e5-0310-9ffc-ced21a209358

--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,17 @@
+1.13.2
+------
+fix a compiler warning
+
+
+
+1.13.1
+------
+remove the qnorm.c code. This has been moved to preprocessCore, along with normalize.quantiles.determine.target(), normalize.quantiles.use.target() and a few related things.
+
+
+
+
+
 1.11.13
 -------
 PLMset no longer contains an eSet object and has no direct dependencies on ExpressionSets etc
