update MAplot vignette to refer to ExpressionSet rather than exprSet objects.
git-svn-id: https://hedgehog.fhcrc.org/bioconductor/trunk/madman/Rpacks/affyPLM@25515 bc3139a8-67e5-0310-9ffc-ced21a209358

--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,8 @@
+1.13.6
+------
+change MAplot vignette to refer to ExpressionSet rather than exprSet objects
+
+
 1.13.4
 ------
 core rlm code is now in preprocessCore. Also moved AvgLog, LogAvg and lm code there.
