move affydata from "depends" to "suggests"
git-svn-id: https://hedgehog.fhcrc.org/bioconductor/trunk/madman/Rpacks/affyPLM@26324 bc3139a8-67e5-0310-9ffc-ced21a209358

--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,9 @@
+1.13.7
+------
+move affydata from Depends to Suggest:
+
+
+
 1.13.6
 ------
 change MAplot vignette to refer to ExpressionSet rather than exprSet objects
