fix vignettes for dealing with "Dilution" dataset from affydata
git-svn-id: https://hedgehog.fhcrc.org/bioconductor/trunk/madman/Rpacks/affyPLM@26351 bc3139a8-67e5-0310-9ffc-ced21a209358

--- a/inst/doc/AffyExtensions.Rnw
+++ b/inst/doc/AffyExtensions.Rnw
@@ -33,7 +33,8 @@
 This majority of this document describes the \Rfunction{fitPLM} function. Other vignettes for \Rpackage{affyPLM} describe quality assessment tools and the \Rfunction{threestep} function for computing expression measures. After starting R, the package should be loaded using:
 <<loadData,results=hide>>=
 library(affyPLM)
-data(Dilution)   # an example dataset provided by the affy package
+require(affydata)
+data(Dilution)   # an example dataset provided by the affydata package
 ##FIXME: drop this after Dilution is updated
 Dilution = updateObject(Dilution)
 options(width=36)
