--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,8 @@
+1.13.9
+------
+Remove R_rlm_interfaces.c from affyPLM (it has been moved to preproceeCore 
+
+
 1.13.8
 ------
 Fix so vignettes build
