clean up include files. Try to differentiate similar named c source code files in affyPLM and preprocessCore by renaming these files PLM_*
git-svn-id: https://hedgehog.fhcrc.org/bioconductor/trunk/madman/Rpacks/affyPLM@26988 bc3139a8-67e5-0310-9ffc-ced21a209358

--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,11 @@
+1.13.10
+-------
+
+Continue clean up with code that had previously been moved to preprocessCore
+
+
+
+
 1.13.9
 ------
 Remove R_rlm_interfaces.c from affyPLM (it has been moved to preproceeCore 
