commit the deletion and addition of a file (should have been previously committed)
git-svn-id: https://hedgehog.fhcrc.org/bioconductor/trunk/madman/Rpacks/affyPLM@27067 bc3139a8-67e5-0310-9ffc-ced21a209358

--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,14 @@
+1.13.13
+-------
+commit the deletion of a file that should have been removed from
+the repository
+
+1.13.12
+-------
+restructure medianlogPM and logmedianPM code
+
+
+
 1.13.10
 -------
 
